add the statistic filter

--- a/filter/StatisticFilter/CMakeLists.txt
+++ b/filter/StatisticFilter/CMakeLists.txt
@@ -1,23 +1,20 @@
 cmake_minimum_required (VERSION 2.6 FATAL_ERROR)
 
-project      (pcl-visualizer)
-#find_package (Qt REQUIRED)
-#find_package (VTK REQUIRED)
+project      (statistic_outliers_remove)
 find_package (PCL 1.7.1 REQUIRED)
 
 include_directories (${PCL_INCLUDE_DIRS})
 link_directories    (${PCL_LIBRARY_DIRS})
 add_definitions     (${PCL_DEFINITIONS})
 
-set  (project_SOURCES src/main.cpp 	src/global.cpp 		src/rgbsegmentation.cpp src/pclviewer.cpp 	src/statisticfilter.cpp)
-set  (project_HEADERS 			src/global.h 		src/rgbsegmentation.h 	src/pclviewer.h 	src/statisticfilter.h)
-set  (project_FORMS   			src/global.ui 		src/rgbsegmentation.ui 	src/pclviewer.ui 	src/statisticfilter.ui)
-#set  (VTK_LIBRARIES   vtkRendering vtkGraphics vtkHybrid QVTK)
+set  (project_SOURCES src/main.cpp src/statisticfilter.cpp)
+set  (project_HEADERS src/statisticfilter.h)
+set  (project_FORMS   src/statisticfilter.ui)
 
 QT5_WRAP_CPP (project_HEADERS_MOC   ${project_HEADERS})
 QT5_WRAP_UI  (project_FORMS_HEADERS ${project_FORMS})
 
-#INCLUDE         (${QT_USE_FILE})
+
 ADD_DEFINITIONS (${QT_DEFINITIONS})
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
@@ -28,6 +25,5 @@ ADD_EXECUTABLE  (main ${project_SOURCES}
 TARGET_LINK_LIBRARIES (main 
 ${QT_LIBRARIES} 
 ${PCL_LIBRARIES} 
-#${VTK_LIBRARIES}
 )
 
