--- a/filter/conditional_filter/CMakeLists.txt
+++ b/filter/conditional_filter/CMakeLists.txt
@@ -9,9 +9,9 @@ include_directories (${PCL_INCLUDE_DIRS})
 link_directories    (${PCL_LIBRARY_DIRS})
 add_definitions     (${PCL_DEFINITIONS})
 
-set  (project_SOURCES main.cpp pclviewer.cpp)
-set  (project_HEADERS pclviewer.h)
-set  (project_FORMS   pclviewer.ui)
+set  (project_SOURCES src/main.cpp src/pclviewer.cpp)
+set  (project_HEADERS src/pclviewer.h)
+set  (project_FORMS   src/pclviewer.ui)
 #set  (VTK_LIBRARIES   vtkRendering vtkGraphics vtkHybrid QVTK)
 
 QT5_WRAP_CPP (project_HEADERS_MOC   ${project_HEADERS})
